--- a/index.html
+++ b/index.html
@@ -847,10 +847,11 @@
     </section>
 
             <!-- GỬI QUÀ -->
-      <!--   <section id="gift" class="section-gift" style="display:block">
+       <section id="gift" class="section-gift" style="display:block">
             <div class="container">
                 <p class="subtitle"></p>
-                <h2 class="uk-heading-small uk-text-center script-font uk-text-cappercase" style="font-size: 30px;">
+                <h2 class="uk-heading-small uk-text-center script-font uk-text-cappercase" style="font-size: 20px;margin-left: 20px;
+        margin-right:25px;">
                     Gửi quà cô dâu chú rể
                 </h2>
                 <a href="#box-gift" data-fancybox="" class="btn btn-primary">
@@ -867,8 +868,8 @@
                     <div class="gift-container" id="gift-container">
                         <div class="gift-card">
                             <div class="gift-qr">
-                                <img src="images/kkLIBpq9PptkXwt59y1fBIwOTNNpx0GRr1FaWyAy.jpg" alt="" class="groom_qr" style="max-width:100%">
-                                <img src="images/3gyaoIRYCbdjKEn44fmIUPdOlYduvE5Wc6hGpXzv.jpg" alt="" class="groom_qr" style="max-width:100%">
+                               <!--  <img src="images/kkLIBpq9PptkXwt59y1fBIwOTNNpx0GRr1FaWyAy.jpg" alt="" class="groom_qr" style="max-width:100%"> -->
+                                <img src="images/2dc59030-22d7-473e-8464-e2dd61d7cd03.jfif" alt="" class="groom_qr" style="max-width:100%">
                             </div>
                             <div class="gift-body">
                             </div>
@@ -880,7 +881,7 @@
             </div>
 
 
-        </section> -->
+        </section>
     
     <!-- END GỬI QUÀ -->
 
