--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 
                             <div class="timeline-media">
 
-                                <img src="images/W9i6mZevfmMqCKrJzvuLsi4OsyGeg9uUQkQJFSJ5.jpg" alt="" class="timline-img">
+                                <img src="images/lLV68ntIeiXY1vUVutNncKXCqf9OGLLuJxf9osBZ.jpg" alt="" class="timline-img">
 
                             </div>
 
@@ -699,7 +699,7 @@
 
     <!-- COUNT DOWN -->
 
-    <section id="countdown-secton" class="uk-background-cover uk-section uk-section-large uk-text-center uk-light" style="background-image:url(images/lLV68ntIeiXY1vUVutNncKXCqf9OGLLuJxf9osBZ.jpg)">
+    <section id="countdown-secton" class="uk-background-cover uk-section uk-section-large uk-text-center uk-light" style="background-image:url(images/W9i6mZevfmMqCKrJzvuLsi4OsyGeg9uUQkQJFSJ5.jpg">
         <div class="uk-container">
 
             <h2 style="font-size: 20px;font-weight: 100;margin-top:100px;" class="uk-heading-small uk-text-center ">
